deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: health-pipeline
  labels:
    app.kubernetes.io/part-of: health-pipeline
